tdf#157299 sc a11y: Limit amount of reported cell relations

For the cells referenced in formulae, the a11y `CONTROLLED_BY`
relation is reported.

Since formulae can reference a large amount of cells, creating
the a11y objects for each of these cells can result in Calc freezing,
e.g. for the tdf#157299 `SUMIF` example that was referencing a whole
column (containing 1048576 cells).

Prevent that by limiting the maximimum amount of cells to handle
here to 1000, and just printing a warning to the log otherwise
and ignore cell ranges having more cells.

If there's a need to increase the limit, that should be possible
within certain bounds. My test with a modified SUMIF that just
uses 999 cells wasn't causing any noticeable delay and the
relations were shown in Accerciser as expected.

From a quick look at the Orca and NVDA source code,
they currently don't seem to make use of the
`CONTROLLED_BY` relation for LibreOffice at all.

Change-Id: Ia74e0e88d9dbd7650832664b9c027262367b428e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157265
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>